--- a/public/ng-template/content/pages/pageModal.html
+++ b/public/ng-template/content/pages/pageModal.html
@@ -10,6 +10,11 @@
 		</div>
 		<p />
 		<div class="row">
+			<span class="col-md-3">Google Calendar: </span>
+			<input type="text" ng-model="page.google_calendar" />
+		</div>
+		<p />
+		<div class="row">
 			<span class="col-md-3">ENG Path: </span>
 			<input type="text" ng-model="page.eng.lang_path" disabled />
 			<br />
